Opened 11 years ago

Closed 11 years ago

#4903 closed defect (fixed)

FLV regression

Reported by: cgbug Owned by:
Priority: important Component: avformat
Version: git-master Keywords: flv regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Sample: https://www.sendspace.com/file/us0ljq

Working: 20150915-git-8e92462
Broken: 20150916-git-cbbd906

ffmpeg version N-75316-gcbbd906 Copyright (c) 2000-2015 the FFmpeg developers

built with gcc 4.9.3 (GCC)
configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-avisynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enable-iconv --enable-libass --enable-libbluray --enable-libbs2b --enable-libcaca --enable-libdcadec --enable-libfreetype --enable-libgme --enable-libgsm --enable-libilbc --enable-libmodplug --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-libopus --enable-librtmp --enable-libschroedinger --enable-libsoxr --enable-libspeex --enable-libtheora --enable-libtwolame --enable-libvidstab --enable-libvo-aacenc --enable-libvo-amrwbenc --enable-libvorbis --enable-libvpx --enable-libwavpack --enable-libwebp --enable-libx264 --enable-libx265 --enable-libxavs --enable-libxvid --enable-lzma --enable-decklink --enable-zlib
libavutil 55. 2.100 / 55. 2.100
libavcodec 57. 2.100 / 57. 2.100
libavformat 57. 2.100 / 57. 2.100
libavdevice 57. 0.100 / 57. 0.100
libavfilter 6. 4.100 / 6. 4.100
libswscale 4. 0.100 / 4. 0.100
libswresample 2. 0.100 / 2. 0.100
libpostproc 54. 0.100 / 54. 0.100

[flv @ 02caf800] Packet mismatch 177 445
[flv @ 02caf800] Could not find codec parameters for stream 0 (Video: none, none): unknown codec
Consider increasing the value for the 'analyzeduration' and 'probesize' options
[flv @ 02caf800] Could not find codec parameters for stream 1 (Audio: none, 0 channels): unknown codec
Consider increasing the value for the 'analyzeduration' and 'probesize' options
test.flv: could not find codec parameters
Input #0, flv, from 'test.flv':

Metadata:

hasAudio : true
hasKeyframes : true
metadatacreator : MEGA

Duration: 00:00:20.35, start: 0.000000, bitrate: 301 kb/s

Stream #0:0: Video: none, none, 1k tbr, 1k tbn, 1k tbc
Stream #0:1: Audio: none, 0 channels

Attachments (1)

test.flv (748.5 KB ) - added by Carl Eugen Hoyos 11 years ago.

Download all attachments as: .zip

Change History (3)

comment:1 by Carl Eugen Hoyos, 11 years ago

Keywords: flv regression added
Priority: normalimportant
Reproduced by developer: set

by Carl Eugen Hoyos, 11 years ago

Attachment: test.flv added

comment:2 by Michael Niedermayer, 11 years ago

Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.