avformat/flvdec: set broken_sizes for "metadatacreator : MEGA"

The 2nd size value is wrong for the sample file

Fixes: Ticket4903

Signed-off-by: Michael Niedermayer <michael@niedermayer.cc>